# honeybadger

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  generate_coverage_report.sh  generate_gcov.sh  index.md  sonar-project.properties  vcpkg.json
.ci/: Dockerfile  Jenkinsfile  docker-compose.yml
.cicd/: gcovr.properties  sonar-project.properties
.cicd/.docker/: Dockerfile  README.md
.circleci/: config.yml
.docker/: Dockerfile  README.md  install-cmake.sh  install-sonar-scanner.sh
.jenkins/: Dockerfile  docker-compose.yml  plugins.txt
benchmark/: CMakeLists.txt
benchmark/cmake/: googlebenchmark.cmake
cmake/: CPackConfig.cmake  CodeCoverage.cmake  CompilationFlags.cmake  PrintInfo.cmake  doxygen.cmake
doc/: CMakeLists.txt  Doxyfile
docs/: CMakeLists.txt  Doxyfile
docs/architecture_decision_record/: README.md  template.md
docs/contributing_template/: CONTRIBUTING.md  feature.md  pull_request.md
docs/issueTemplate/: bug.md
docs/project_documentation/: README.md  preliminary_assumptions.md
example/: CMakeLists.txt
example/image/: CMakeLists.txt
example/image/preprocessing/: CMakeLists.txt  colorConvert.cc
html/: Color_8hh_source.html  Converter_8hh_source.html  _color_8hh_source.html  _converter_8hh_source.html  annotated.html  classes.html  classhoneybadger_1_1convert_1_1Converter-members.html  classhoneybadger_1_1convert_1_1Converter.html  classhoneybadger_1_1convert_1_1_converter-members.html  classhoneybadger_1_1convert_1_1_converter.html  classhoneybadger_1_1converter_1_1Converter-members.html  classhoneybadger_1_1converter_1_1Converter.html  classhoneybadger_1_1image_1_1preprocessing_1_1Color-members.html  classhoneybadger_1_1image_1_1preprocessing_1_1Color.html  classhoneybadger_1_1image_1_1preprocessing_1_1_color-members.html  classhoneybadger_1_1image_1_1preprocessing_1_1_color.html  dir_5b0f44104e54038a256d72a26e8a8d76.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_75f23d276a46a372f11d5c8f8ac27df8.html  dir_776ce328de7a85c3611221d1d1379c41.html  dir_9b81e4604c80a0e59329cab8adb7927c.html  dir_a6a17ec937b4e07383dde71de6c9d000.html  dir_a6aac2ef2f1942941faafda1481139d6.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ed995e80ad17e65bb9e120dbadaba795.html  files.html  functions.html  functions_func.html  index.html
html/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  functions_1.js  searchdata.js
include/coverage/: calculator.hh
include/honeybadger/convert/: Converter.hh
include/honeybadger/converter/: Converter.hh
include/honeybadger/image/: Color.hh
include/honeybadger/image/preprocessing/: Color.hh
src/: CMakeLists.txt  main.cc
src/coverage/: CMakeLists.txt  calculator.cc
src/image/: CMakeLists.txt
src/image/preprocessing/: CMakeLists.txt  Color.cc
test/: CMakeLists.txt  test.cc
test/cmake/: googletest.cmake
test/coverage/: calculator.cmake  calculator_test.cc
test/image/preprocessing/: Color_test.cc  test_Color.cc
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/image/preprocessing/: Color_test.cc  preprocessing_test.cmake  test_Color.cc
tests/integration_tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/image/preprocessing/: test_Color.cc
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/image/preprocessing/: Color_test.cc
