cmake_minimum_required(VERSION 3.20)
project(ocr VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE MATCHES "Release")
    set(CMAKE_BUILD_TYPE Release)
elseif(CMAKE_BUILD_TYPE MATCHES "Debug")
    set(CMAKE_BUILD_TYPE Debug)
else()
    message(FATAL_ERROR "Available build types: Debug and Release.")
endif(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE MATCHES "Release")

if(MSVC)
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
endif()

option(ENABLE_TESTS "Enable tests" ON)
if (ENABLE_TESTS)
    enable_testing()
    add_subdirectory(test)
endif()

option(ENABLE_BENCHMARK "Enable benchmark" ON)
if (ENABLE_BENCHMARK)
    add_subdirectory(benchmark)
endif()

option(ENABLE_EXAMPLE "Enable example" ON)
if (ENABLE_EXAMPLE)
    add_subdirectory(example)
endif()

option(ENABLE_DOC "Enable documentation" ON)
if (ENABLE_DOC)
    include(${CMAKE_SOURCE_DIR}/cmake/doxygen.cmake)
endif ()
